--- a/BACKEND/dockerfile
+++ b/BACKEND/dockerfile
@@ -6,14 +6,7 @@ COPY --from=composer /usr/bin/composer /usr/bin/composer
 
 # Instalar extensiones necesarias
 RUN docker-php-ext-install pdo pdo_mysql session
-# RUN apt-get update && apt-get install  -y \
-#     git \
-#     unzip \
-#     libzip-dev 
 
-# RUN set -eux; \
-#     docker-php-ext-configure gd --with-freetype --with-jpeg; \
-#     docker-php-ext-install exif gd
 RUN apt-get update && apt-get install  -y \
     git \
     unzip \
@@ -26,23 +19,28 @@ RUN apt-get update && apt-get install  -y \
     && docker-php-ext-enable gd
 # E
 WORKDIR /var/www/html/mercasena/
-
+RUN composer install --no-dev --optimize-autoloader
 COPY ./composer.json /var/www/html/mercasena/
 COPY ./composer.lock /var/www/html/mercasena/
 
-RUN composer install  
+# RUN echo "Intentando ejecuta composer install"
+# RUN composer install  
 # aca va el codigo del server 
 COPY . /var/www/html/mercasena/
 
 
+# RUN composer install  
 # Permisos
 RUN chown -R www-data:www-data /var/www/html
 RUN mkdir -p /var/lib/php/sessions \
-    && chown -R www-data:www-data /var/lib/php/sessions
+&& chown -R www-data:www-data /var/lib/php/sessions
 
 
 # a copiar el php  ini par alo de las sesiones
 COPY ./config/php.ini /usr/local/etc/php/conf.d/session.ini
 # EXPOSE 8080
 # CMD [ "apache2","-D","FOREGROUND" ]
+# RUN composer install  
+# RUN  pwd
+
 CMD ["apache2-foreground"]
