--- a/FRONTEND/Dockerfile
+++ b/FRONTEND/Dockerfile
@@ -12,7 +12,8 @@ RUN npm run build
 # # esta es la parte del servidor
 FROM nginx:alpine
 ADD ./config/server.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /app/dist /var/www/app
+COPY --from=build /app/dist /usr/share/nginx/html
+
 
 EXPOSE 4000
 
